# ZK-AppChain

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
crates/common/src/: lib.rs
crates/engine/src/: lib.rs  processor.rs  wal.rs
crates/sequencer-node/: Cargo.toml
crates/sequencer-node/src/: crypto.rs  main.rs  mempool.rs  settlement.rs  state.rs  trie_codec.rs
crates/simulator/src/: lib.rs
crates/zk-prover/: Cargo.toml
crates/zk-prover/src/: lib.rs
l1-contracts/cache/: solidity-files-cache.json
l1-contracts/src/: EviceRollup.sol
l1-contracts/test/: EviceRollup.t.sol
