[package]
name = "sequencer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
engine = { workspace = true }
zk-prover = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }