[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
hashbrown = "0.14"
serde = { version = "1.0", features = ["derive"] }

plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git" }
plonky2_field = { git = "https://github.com/0xPolygonZero/plonky2.git" }
plonky2_util = { git = "https://github.com/0xPolygonZero/plonky2.git" }
